# filelist

./: .gitignore  CMakeLists.txt  COPYRIGHT  DESCRIPTION  README.md  TODO
doc/: TODO  uml.vpp
src/: .gitignore  file-name-lister  file-name-resolver  filelist  filelist-header.txt.in  filelist.py
src/filelist_lib/: main.py  program_info.py
tests/: .gitignore  CMakeLists.txt  README.md  comments-blanklines-single-file.m4.simptestcase  comments-blanklines-single-print.m4.simptestcase  common.m4  common.m4.in  common.xly  exactly.suite  existing-file-relative-file-argument.m4.simptestcase  existing-file.m4.simptestcase  file-existing-relative-file-argument.m4.simptestcase  file-existing-with-suppress-non-path-output.m4.simptestcase  file-existing.m4.simptestcase  file-non-existing.m4.simptestcase  include-existing--relative-file-argument.m4.simptestcase  include-existing-dir.m4.simptestcase  include-existing-in-same-dir.m4.simptestcase  include-existing-in-subdir.m4.simptestcase  include-existing.m4.simptestcase  include-non-existing.m4.simptestcase  invalid-arguments-file-does-not-exist.m4.simptestcase  invalid-usage-no-arguments.m4.simptestcase  list-existing-directory-relative-file-argument.m4.simptestcase  list-existing-directory.m4.simptestcase  make-executables.py  multiple-file-arguments.m4.simptestcase  referenced-file-does-not-exist.m4.simptestcase  usage-no-file-arguments.m4.simptestcase
tests/basic/data/: print-2.list
tests/basic/input/: comments-blanklines-single-print.list  print-1.list  simple-print.list
tests/basic/output/: custom-instruction-prefix.txt
tests/basic/testcases/: comments-blanklines-single-print.m4.simptestcase  custom-instruction-prefix.m4.simptestcase  instruction-name-variants.m4.simptestcase  invalid-arguments-file-does-not-exist.m4.simptestcase  multiple-file-arguments.m4.simptestcase  parse-ignored-lines.m4.simptestcase  parse-invalid-instruction-name.m4.simptestcase  parse-invalid-line-syntax.m4.simptestcase  print--suppress-non-path-output.m4.simptestcase  simple-print.m4.simptestcase  suppress-print-output.m4.simptestcase
tests/file-path/input/: absolute-file-paths-existing.list
tests/file-path/output/: existing.txt  file-existing.txt  multiple-file-arguments.txt
tests/file-path/testcases/: absolute-file-paths-existing-with-output-absolute-name.m4.simptestcase  absolute-file-paths-existing.m4.simptestcase  absolute-file-paths-nonexisting.m4.simptestcase  existing-relative-file-argument.m4.simptestcase  existing-with-suppress-non-path-output.m4.simptestcase  existing.m4.simptestcase  file-existing-relative-file-argument.m4.simptestcase  file-existing-with-suppress-non-path-output.m4.simptestcase  file-existing.m4.simptestcase  file-non-existing.m4.simptestcase  multiple-file-arguments.m4.simptestcase  non-existing.m4.simptestcase
tests/include/data/: include-existing-in-same-dir-absolute-filename.list  include-non-existing.list  inclusion-trace-in-error-messages.list  preserve-current-directory.list
tests/include/input/: includes-list-with-ref-to-non-existing-file.list
tests/include/output/: inclusion-trace-in-error-messages-file.txt  inclusion-trace-in-error-messages.txt  preserve-current-directory.txt
tests/include/testcases/: existing--relative-file-argument.m4.simptestcase  existing-dir.m4.simptestcase  existing-in-same-dir-absolute-filename.m4.simptestcase  existing-in-same-dir.m4.simptestcase  existing-in-subdir.m4.simptestcase  inclusion-trace-in-error-messages-file.m4.simptestcase  inclusion-trace-in-error-messages.m4.simptestcase  non-existing.m4.simptestcase  preserve-current-directory.m4.simptestcase
tests/input/: invalid-instruction-line.list
tests/list/: directory-argument-missing.m4.simptestcase  existing-directory-relative-file-argument.m4.simptestcase  existing-directory.m4.simptestcase  invalid-wildcard.m4.simptestcase  wildcards.m4.simptestcase
tests/list/output/: existing-directory-absolute.txt  existing-directory.txt  file-name-condition--exclude--shell-pattern.txt  list-home-dir.txt  list-same-dir.txt  wildcards.txt
tests/list/pattern-test-data/: directory-argument-missing.list  filer-on-filetype-combined-with-namepattern.list  invalid-wildcard.list  wildcards.list
tests/list/testcases/: directory-argument-missing.m4.simptestcase  existing-directory-absolute.m4.simptestcase  existing-directory-relative-file-argument.m4.simptestcase  existing-directory.m4.simptestcase  file-name-condition--exclude--shell-pattern.m4.simptestcase  file-name-condition-with-reg-ex.m4.simptestcase  file-name-condition-with-wildcard-and-reg-ex.m4.simptestcase  filer-on-filetype-combined-with-namepattern.m4.simptestcase  filer-on-filetype-file.m4.simptestcase  invalid-wildcard.m4.simptestcase  list-home-dir.m4.simptestcase  sort.m4.simptestcase  wildcards.m4.simptestcase
tests/other/output/: absolute-paths.txt  normalize-paths.txt
tests/other/testcases/: absolute-paths.m4.simptestcase  normalize-paths-relative-file-argument.m4.simptestcase  normalize-paths.m4.simptestcase  output-absolute-paths.m4.simptestcase
tests/output/: comments-blanklines-single-print.txt  existing-file.txt  file-existing-relative-file-argument.txt  include-existing-in-same-dir.txt  include-existing-in-subdir.txt
tests/parse/: common.m4  ignored-lines.m4.simptestcase  instruction-name-variants.m4.simptestcase  invalid-instruction-line.m4.simptestcase  invalid-instruction-name.m4.simptestcase  invalid-line-syntax.m4.simptestcase
tests/preprocessor/data/: single-file.list
tests/scripts/: .gitignore  add-txt-suffix-to-file-paths.awk  rename-simptestcase.bash  simptestcase.bash
tests/testdata/: comments-blanklines-single-file.list  file-existing.list  file-non-existing.list  include-existing-dir.list  include-existing-in-same-dir.list  include-existing-in-subdir.list  include-existing.list  include-non-existing.list  instruction-name-variants.list  invalid-instruction-name.list  list-existing-directory.list  list-with-existing-in-same-dir.list  referenced-file-does-not-exist.list  two-prints.list
tools/: make-interpreted-executable.py
(+192 files in other folders)
